--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     ]
   },
   "dependencies": {
-    "argv": "0.0.2",
     "d3": "^3.5.17",
     "jquery": "^2.2.3",
     "jsdom": "^9.0.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "yargs": "^4.8.1"
   }
 }
