--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,10 @@
 {
-    "attribute": {
+    "attr": {
         "width": 1200,
         "height": 800,
         "diameter": 1000
     },
-    "normalization": {
+    "norm": {
         "circle": true,
         "bar": false
     },
