--- a/config/config.json
+++ b/config/config.json
@@ -7,6 +7,7 @@
             "diameter": 1000
         },
         "normalize_circle": true,
+        "normalize_bar": true,
         "show_all_nodes": false
     }
 }
