Modify the display order of SVG elements

--- a/config/config.json
+++ b/config/config.json
@@ -10,11 +10,20 @@
         "normalize_bar": true,
         "show_all_nodes": false
     },
-    "colorset": [
-        "rgb(55,120,191)",
-        "rgb(254,179,8)",
-        "rgb(168,164,149)",
-        "rgb(123,178,116)",
-        "rgb(130,95,135)"
-    ]
+    "color_scheme": {
+        "category": [
+            "rgb(0,104,183)",
+            "rgb(218,4,66)",
+            "rgb(0,156,210)",
+            "rgb(32,162,136)",
+            "rgb(241,140,67)",
+            "rgb(238,134,167)",
+            "rgb(174,3,120)",
+            "rgb(252,199,13)"
+        ],
+        "linear": [
+            "rgb(223,236,244)",
+            "rgb(45,69,91)"
+        ]
+    }
 }
