--- a/package.json
+++ b/package.json
@@ -3,23 +3,32 @@
   "version": "0.0.1",
   "description": "A command-line based visualization tool for massive-scale omics data",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "babel": "gulp babel",
     "build": "gulp build",
     "watch": "gulp watch"
   },
-  "author": "Yuta Yamate <yyamate@bio.titech.ac.jp>",
+  "author": {
+    "name": "Yuta Yamate",
+    "email": "yyamate@bio.titech.ac.jp>",
+    "url": "https://yyuuta88.github.io/"
+  },
   "homepage": "http://www.bioviz.tokyo/functree",
+  "repository": {
+    "type": "git",
+    "url": "http://tsubaki.bio.titech.ac.jp/yyamate/functree-cli.git"
+  },
+  "bugs": {
+    "url": "http://tsubaki.bio.titech.ac.jp/yyamate/functree-cli/issues"
+  },
   "license": "MIT",
   "devDependencies": {
-    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2015": "^6.16.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-plumber": "^1.1.0"
   },
   "dependencies": {
     "d3": "^3.5.17",
-    "jquery": "^2.2.3",
     "jsdom": "^9.0.0",
     "underscore": "^1.8.3",
     "yargs": "^5.0.0"
