--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "author": {
     "name": "Yuta Yamate",
-    "email": "yyamate@bio.titech.ac.jp>",
+    "email": "yyamate@bio.titech.ac.jp",
     "url": "https://yyuuta88.github.io/"
   },
   "homepage": "http://www.bioviz.tokyo/functree",
