--- a/config/config.json
+++ b/config/config.json
@@ -1,15 +1,16 @@
 {
+  "target_id": "main",
   "functree": {
     "attribute": {
       "width": 1200,
-      "height": 800,
+      "height": 1000,
       "diameter": 1000
     },
     "style": "heatmap",
-    "normalize_circle": true,
-    "normalize_bar": true,
-    "disable_display_charts": false,
+    "enable_normalize_rounds": true,
+    "enable_normalize_charts": true,
     "disable_display_rounds": false,
+    "disable_display_charts": false,
     "show_all_nodes": false
   },
   "threshold": 0.05,
