--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "functree-cli",
   "version": "0.0.1",
-  "description": "A command-line based visualization tool for massive-scale omics data",
+  "description": "Visualization and analysis tool for omics data based on biological functional tree",
   "scripts": {
     "babel": "gulp babel",
     "build": "gulp build",
@@ -12,13 +12,13 @@
     "email": "yyamate@bio.titech.ac.jp",
     "url": "https://yyuuta88.github.io/"
   },
-  "homepage": "http://www.bioviz.tokyo/functree",
+  "homepage": "http://www.bioviz.tokyo/functree2/",
   "repository": {
     "type": "git",
-    "url": "http://tsubaki.bio.titech.ac.jp/yyamate/functree-cli.git"
+    "url": "https://github.com/yyuuta88/functree-cli.git"
   },
   "bugs": {
-    "url": "http://tsubaki.bio.titech.ac.jp/yyamate/functree-cli/issues"
+    "url": "https://github.com/yyuuta88/functree-cli/issues"
   },
   "license": "MIT",
   "devDependencies": {
@@ -35,5 +35,6 @@
   },
   "bin": {
     "functree": "./bin/functree"
-  }
+  },
+  "private": true
 }
