--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
   "dependencies": {
     "d3": "^3.5.17",
     "jsdom": "^9.0.0",
+    "svg2png": "^4.1.1",
     "underscore": "^1.8.3",
-    "yargs": "^5.0.0"
+    "yargs": "^6.0.0"
   },
   "bin": {
     "functree": "./bin/functree"
