--- a/package.json
+++ b/package.json
@@ -2,17 +2,11 @@
   "name": "functree-cli",
   "version": "0.0.1",
   "description": "Visualization and analysis tool for omics data based on biological functional tree",
-  "scripts": {
-    "babel": "gulp babel",
-    "build": "gulp build",
-    "watch": "gulp watch"
-  },
   "author": {
     "name": "Yuta Yamate",
     "email": "yyamate@bio.titech.ac.jp",
     "url": "https://yyuuta88.github.io/"
   },
-  "homepage": "http://www.bioviz.tokyo/functree2/",
   "repository": {
     "type": "git",
     "url": "https://github.com/yyuuta88/functree-cli.git"
@@ -20,22 +14,38 @@
   "bugs": {
     "url": "https://github.com/yyuuta88/functree-cli/issues"
   },
+  "homepage": "http://www.bioviz.tokyo/functree2/",
   "license": "MIT",
+  "keywords": [
+    "visualization",
+    "bioinformatics",
+    "biology",
+    "bio",
+    "omics",
+    "kegg",
+    "cli"
+  ],
+  "main": "./dist/functree.js",
+  "bin": {
+    "functree": "./bin/functree"
+  },
+  "dependencies": {
+    "colors": "^1.1.2",
+    "d3": "^3.5.17",
+    "jsdom": "^9.0.0",
+    "svg2png": "^4.1.1",
+    "yargs": "^6.0.0"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.16.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-plumber": "^1.1.0"
   },
-  "dependencies": {
-    "d3": "^3.5.17",
-    "jsdom": "^9.0.0",
-    "svg2png": "^4.1.1",
-    "underscore": "^1.8.3",
-    "yargs": "^6.0.0"
-  },
-  "bin": {
-    "functree": "./bin/functree"
+  "scripts": {
+    "babel": "gulp babel",
+    "build": "gulp build",
+    "watch": "gulp watch"
   },
   "private": false
 }
