--- a/etc/config.json
+++ b/etc/config.json
@@ -1,43 +1,35 @@
 {
-  "target_id": "main",
-  "stats": {
-      "mannwhitneyu": {
-          "use_continuity": true,
-          "alternative": null
-      }
-  },
-  "functree": {
-    "attribute": {
-      "width": 1200,
-      "height": 1200,
-      "diameter": 1200
-    },
-    "style": "stacked",
-    "enable_normalize_rounds": true,
-    "enable_normalize_charts": true,
-    "disable_display_rounds": false,
-    "disable_display_charts": false,
-    "disable_display_labels": false,
-    "disable_display_lower_than": 0,
-    "use_1stcol_as_radius": true,
-    "show_all_nodes": false,
-    "label_data": "label"
-  },
-  "threshold": 0.03,
-  "color_scheme": {
-    "category": [
-      "rgb(0,104,183)",
-      "rgb(218,4,66)",
-      "rgb(0,156,210)",
-      "rgb(32,162,136)",
-      "rgb(241,140,67)",
-      "rgb(238,134,167)",
-      "rgb(174,3,120)",
-      "rgb(252,199,13)"
-    ],
-    "linear": [
-      "rgb(223,236,244)",
-      "rgb(45,69,91)"
-    ]
+  "targetElementId": "main",
+  "width": 1200,
+  "height": 1200,
+  "diameter": 1200,
+  "mappingStyle": "stacked",
+  "displayCircles": true,
+  "displayBars": true,
+  "displayLabels": true,
+  "displayLabelsThreshold": 0.03,
+  "mapObjectsHigherThan": 1,
+  "normalizeCircleRadius": true,
+  "normalizeBarHight": true,
+  "useFirstColumnAsCircleRadius": true,
+  "openAllNodes": false,
+  "labelDataKey": "label",
+  "colorSchemeCategorical": [
+    "rgb(0,104,183)",
+    "rgb(218,4,66)",
+    "rgb(0,156,210)",
+    "rgb(32,162,136)",
+    "rgb(241,140,67)",
+    "rgb(238,134,167)",
+    "rgb(174,3,120)",
+    "rgb(252,199,13)"
+  ],
+  "colorSchemeLinear": [
+    "rgb(223,236,244)",
+    "rgb(45,69,91)"
+  ],
+  "mannwhitneyu": {
+    "use_continuity": true,
+    "alternative": null
   }
 }
