Modify displaying circles and labels

--- a/etc/config.json
+++ b/etc/config.json
@@ -6,13 +6,12 @@
   "displayCircles": true,
   "displayBars": true,
   "displayLabels": true,
-  "displayLabelsThreshold": 0.03,
+  "displayLabelsThresholds": [0.0, 1.00, 0.30, 0.05, 0.01],
   "displayLegends": true,
   "displayNodesLowerThan": 5,
   "mapObjectsHigherThan": 1,
   "normalizeCircleRadius": true,
   "normalizeBarHight": true,
-  "useFirstColumnAsCircleRadius": true,
   "rootNodeName": null,
   "labelDataKey": "label",
   "viewerElementId": "main",
