--- a/package.json
+++ b/package.json
@@ -38,11 +38,14 @@
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.16.0",
+    "eslint": "^3.18.0",
     "gulp": "^3.9.1",
+    "gulp-eslint": "^3.0.1",
     "gulp-babel": "^6.1.2",
     "gulp-plumber": "^1.1.0"
   },
   "scripts": {
+    "lint": "gulp lint",
     "babel": "gulp babel",
     "build": "gulp build",
     "watch": "gulp watch"
