--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "d3": "^3.5.17",
     "jsdom": "^9.0.0",
     "svg2png": "^4.1.1",
+    "tmp": "0.0.31",
     "yargs": "^7.0.1"
   },
   "devDependencies": {
